[MAINT] Fix alignment on safari

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -421,7 +421,7 @@ body {
 }
 
 input#exerciseUpload {
-    width: 0;
+    display: none;
 }
 
 #uploadImgBtn {
